# linebot

./: generate_instructions.py  linebot_responses.json  session_log.txt
.github/instructions/: linebot_instructions.md
arduino/linebot/: linebot.ino  linebot_onboard.ino
linebot_ws/src/line_follower/: package.xml  setup.py
linebot_ws/src/line_follower/config/: pid_params.yaml
linebot_ws/src/line_follower/launch/: line_follower.launch.py
linebot_ws/src/line_follower/line_follower/: line_follower_controller_node.py  linebot_manager_node.py  serial_bridge_node.py
linebot_ws/src/linebot_ros/: package.xml  setup.py
linebot_ws/src/linebot_ros/config/: serial_params.yaml
linebot_ws/src/linebot_ros/launch/: linebot_launch.py
linebot_ws/src/linebot_ros/linebot_ros/: __init__.py  manager_node.py  serial_bridge_node.py
linebot_ws/src/linebot_ros/resource/: linebot_ros
