<?xml version="1.0"?>
<package format="3">
  <name>linebot_ros</name>
  <version>0.1.0</version>
  <description>ROS2 nodes for LineBot: serial bridge and manager (PID, telemetry, services)</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>

  <exec_depend>python3-serial</exec_depend>

</package>
